syntax = "proto3";

option csharp_namespace = "Infrastructure.gRpc";

package communication;

message TopicUserRequest {
    
    string topic_id = 1;
    string user_id = 2;
}

message TopicUserResponse {
    
    bool result = 1;
}

service TopicPermissions {
    
    rpc IsOwner(TopicUserRequest) returns (TopicUserResponse);
    
    rpc IsModerator(TopicUserRequest) returns (TopicUserResponse);
}
